# anonify

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
anonify/: __init__.py  main.py  py.typed
anonify/analysis/: reporter.py  visualizer.py
anonify/modules/: nuller.py  obfuscate.py  randomizer.py
anonify/utils/: logger.py
src/anonify/: __init__.py  main.py  preprocessor.py
src/anonify/analysis/: README.md  __init__.py  reporter.py  scoring.py  visualizer.py
src/anonify/modules/: __init__.py  faker.py  hasher.py  nuller.py
src/anonify/utils/: logger.py
test/config_files/: dataframe1_config.yaml
test/data/: dataframe1.csv
tests/: TEST_SUMMARY.md  __init__.py  test_cli_functionality.py  test_comprehensive_validation.py  test_modules.py  test_scoring_integration.py
tests/test_analysis/: test_scoring.py
