[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anonify"
version = "0.1.0"
description = "A comprehensive Python package for data de-identification with scoring and visualization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Parag Chandiwal", email = "chandiwalp@gmail.com"}
]
maintainers = [
    {name = "Parag Chandiwal", email = "chandiwalp@gmail.com"}
]
keywords = [
    "data", "anonymization", "deidentification", "privacy", "gdpr", "hipaa", 
    "data-science", "machine-learning", "statistics", "security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "pyyaml>=5.4.0",
    "faker>=13.0.0",
    "plotly>=5.0.0",
    "scipy>=1.7.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
visualization = [
    "kaleido>=0.2.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
]
dev = [
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "build>=0.7.0",
    "twine>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/pchandiwal-livongo/anonify"
Documentation = "https://github.com/pchandiwal-livongo/anonify#readme"
Repository = "https://github.com/pchandiwal-livongo/anonify.git"
"Bug Tracker" = "https://github.com/pchandiwal-livongo/anonify/issues"

[project.scripts]
anonify = "anonify.main:main"
anonify-report = "anonify.main:generate_report_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["anonify*"]

[tool.setuptools.package-data]
anonify = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

 